--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -13,6 +13,7 @@
     <!-- Please put team members here -->
     <div>
         <p> Team member one </p>
+        <p>Hi, Its Josie</p>
     </div>
   </div>
 
