Adding !!! to Hi, Its Josie

--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -13,7 +13,7 @@
     <!-- Please put team members here -->
     <div>
         <p> Team member one </p>
-        <p>Hi, Its Josie</p>
+        <p>Hi, Its Josie!!!</p>
         <p>Hi, Its David</p>
     </div>
   </div>
